--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Fake GIF Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
@@ -12,12 +13,20 @@
       background: linear-gradient(135deg, #f9d6e2, #d6e4ff);
       min-height: 100vh;
       overflow: hidden;
+      position: relative;
     }
 
     h1 {
       color: #222;
       text-shadow: 2px 2px 4px rgba(0,0,0,0.15);
       margin: 30px 0;
+      font-size: 2em;
+    }
+
+    #loading {
+      font-size: 1.2em;
+      color: #555;
+      margin-bottom: 20px;
     }
 
     img {
@@ -29,6 +38,7 @@
       display: block;
       margin: 0 auto 20px;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
+      display: none;
     }
     img.playing {
       animation: bounce 1s infinite alternate;
@@ -43,11 +53,12 @@
       justify-content: center;
       gap: 20px;
       margin-bottom: 50px;
+      flex-wrap: wrap;
     }
 
     button {
       padding: 12px 28px;
-      font-size: 18px;
+      font-size: 1em;
       border: none;
       border-radius: 12px;
       cursor: pointer;
@@ -58,9 +69,10 @@
       transition: all 0.25s ease;
       position: relative;
       overflow: hidden;
+      min-width: 120px;
     }
 
-    button:hover {
+    button:hover, button:focus {
       transform: translateY(-3px) scale(1.05);
       box-shadow: 0 8px 20px rgba(0,0,0,0.3);
     }
@@ -77,14 +89,13 @@
       background: rgba(255,255,255,0.3);
       transition: 0.3s;
     }
-    button:hover::after {
+    button:hover::after, button:focus::after {
       left: 100%;
     }
 
     #start { background: #28a745; }
     #stop { background: #dc3545; }
 
-    /* particle / fireworks */
     .particle {
       position: absolute;
       width: 8px;
@@ -94,27 +105,28 @@
       animation: rise 3s forwards;
     }
     @keyframes rise {
-      0% {
-        transform: translate(0,0) scale(1);
-        opacity: 1;
-      }
-      100% {
-        transform: translate(var(--x), var(--y)) scale(0);
-        opacity: 0;
-      }
+      0% { transform: translate(0,0) scale(1); opacity: 1; }
+      100% { transform: translate(var(--x), var(--y)) scale(0); opacity: 0; }
+    }
+
+    @media (max-width: 768px) {
+      h1 { font-size: 5vw; }
+      img { width: 60vw; max-width: 320px; }
+      button { padding: 3vw 6vw; font-size: 4vw; min-width: 30vw; }
+      .particle { width: 2vw; height: 2vw; max-width: 12px; max-height: 12px; }
     }
   </style>
 </head>
 <body>
   <h1>พี่แจ้แบบไหนที่เหมาะกับคุณ</h1>
+  <div id="loading">กำลังโหลดรูปภาพ...</div>
   <img id="gif" src="img1.png" alt="Fake GIF">
   
   <div class="btn-container">
-    <button id="start">เริ่ม</button>
-    <button id="stop">หยุด</button>
+    <button id="start" disabled>เริ่ม</button>
+    <button id="stop" disabled>หยุด</button>
   </div>
 
-  <!-- เสียงดอกไม้ไฟ -->
   <audio id="fireworkSound" src="firework.mp3"></audio>
 
   <script>
@@ -128,23 +140,59 @@
     const startBtn = document.getElementById("start");
     const stopBtn = document.getElementById("stop");
     const fireworkSound = document.getElementById("fireworkSound");
+    const loading = document.getElementById("loading");
 
-    // Preload ภาพทั้งหมดเพื่อให้ GIF ลื่น
+    // Preload images
     const images = [];
+    let loadedCount = 0;
     frames.forEach(src => {
       const img = new Image();
       img.src = src;
+      img.onload = () => {
+        loadedCount++;
+        if(loadedCount === frames.length){
+          loading.style.display = "none";
+          gif.style.display = "block";
+          startBtn.disabled = false;
+          stopBtn.disabled = true;
+        }
+      };
       images.push(img);
     });
 
+    stopBtn.addEventListener("click", stopAnimation);
+    stopBtn.addEventListener("touchstart", e=>{e.preventDefault(); stopAnimation();});
+
+    startBtn.addEventListener("click", startAnimation);
+    startBtn.addEventListener("touchstart", e=>{e.preventDefault(); startAnimation();});
+
     function startAnimation() {
+      startBtn.disabled = true;
+      stopBtn.disabled = true;
+
+      // เริ่ม GIF Animation ต่อจาก index ปัจจุบัน
       if (!interval) {
         interval = setInterval(() => {
           index = (index + 1) % images.length;
-          gif.src = images[index].src; // ใช้ preload
-        }, 80); // ปรับความเร็ว GIF
+          gif.src = images[index].src;
+        }, 80);
         gif.classList.add("playing");
       }
+
+      // Countdown 5→0 บนปุ่ม stop
+      let count = 5;
+      stopBtn.textContent = count;
+
+      const countdownInterval = setInterval(() => {
+        count--;
+        if(count >= 0){
+          stopBtn.textContent = count;
+        } else {
+          clearInterval(countdownInterval);
+          stopBtn.textContent = "หยุด";
+          stopBtn.disabled = false;
+        }
+      }, 1000);
     }
 
     function stopAnimation() {
@@ -152,14 +200,13 @@
       interval = null;
       gif.classList.remove("playing");
       createFullScreenFireworks();
-
-      // เล่นเสียงดอกไม้ไฟ
       fireworkSound.currentTime = 0;
       fireworkSound.play();
-    }
 
-    startBtn.addEventListener("click", startAnimation);
-    stopBtn.addEventListener("click", stopAnimation);
+      // เปิดปุ่ม start ให้เล่นต่อได้
+      startBtn.disabled = false;
+      stopBtn.disabled = true;
+    }
 
     function createFullScreenFireworks() {
       for (let i = 0; i < 100; i++) {
@@ -168,8 +215,8 @@
 
         const startX = Math.random() * window.innerWidth;
         const startY = Math.random() * window.innerHeight;
-        const dx = (Math.random() - 0.5) * 300 + "px";
-        const dy = (Math.random() - 1) * 300 + "px";
+        const dx = (Math.random() - 0.5) * (window.innerWidth/2) + "px";
+        const dy = (Math.random() - 1) * (window.innerHeight/2) + "px";
         p.style.setProperty('--x', dx);
         p.style.setProperty('--y', dy);
         p.style.background = `hsl(${Math.random()*360}, 80%, 60%)`;
@@ -177,7 +224,7 @@
         p.style.top = startY + "px";
 
         document.body.appendChild(p);
-        setTimeout(() => p.remove(), 3000); // ลบ particle หลัง 3 วินาที
+        setTimeout(() => p.remove(), 3000);
       }
     }
   </script>
